--- a/resources/config.ini
+++ b/resources/config.ini
@@ -1,6 +1,6 @@
 [launcher]
-path = C:\Users\Kegan\Documents\SimCity 4\_DMR\
-resw = 1280
-resh = 800
-sc4path = 
+path = D:\Users\Kegan\Documents\SimCity 4\_DMR\
+resw = 1920
+resh = 1080
+sc4path = C:\Program Files (x86)\Maxis\SimCity 4 Deluxe\Apps\simcity 4.exe
 
