--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-_SC4MP
-_Server
-_Servers
-dist
-builds
-setupbuilds
+/_SC4MP*
+/_Server*
+/_Servers*
+/dist
+/logs
+/builds
+/setupbuilds
 config.ini
-*.log
 testing.py
+*.log
 *.exe
