--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 
 .pylintrc
 api_test.py
-config.ini
 testing.py
 test.json
 version.rc
@@ -25,5 +24,6 @@ version.rc
 *.log
 *.pdn
 *.cfg
+*.ini
 
 !resources/*.exe
